feat: add widget.js CDN to Site01 (example)

--- a/sites-exemplo/Site01/index.html
+++ b/sites-exemplo/Site01/index.html
@@ -806,7 +806,10 @@ Start Call To Action
 	<!-- Main Js File -->
 	<script src="js/script.js"></script>
 
-	<script src="../../widget.js"></script>
+	<!-- <script src="../../widget.js"></script>  -->
+
+	<script src="https://cdn.jsdelivr.net/gh/ElderSam/prova-frontend-bonifiq@latest/widget.js"></script>
+		<!-- from: https://github.com/ElderSam/prova-frontend-bonifiq/blob/main/widget.js -->
 
 </body>
 
