--- a/sites-exemplo/Site01/index.html
+++ b/sites-exemplo/Site01/index.html
@@ -808,7 +808,7 @@ Start Call To Action
 
 	<!-- <script src="../../widget.js"></script>  -->
 
-	<script src="https://cdn.jsdelivr.net/gh/ElderSam/prova-frontend-bonifiq@latest/widget.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/ElderSam/prova-frontend-bonifiq@master/widget.js"></script>
 		<!-- from: https://github.com/ElderSam/prova-frontend-bonifiq/blob/main/widget.js -->
 
 </body>
